Updated Workflow model